# baeum-maru

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  config.json  go.mod  go.sum
backend/: .env.example  README.md  pyproject.toml  settings.example.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260713_0001_initial_schema.py
backend/app/: __init__.py  composition.py  container.py  main.py
backend/app/api/: __init__.py  dependencies.py  errors.py  middleware.py  realtime.py
backend/app/core/: __init__.py  bootstrap.py  exceptions.py  logging.py  runtime.py  security.py  settings.py  time.py
backend/app/db/: __init__.py  base.py  constraints.py  database.py  migrations.py  models.py  session.py  unit_of_work.py
backend/app/jobs/: __init__.py  backup_jobs.py  excel_jobs.py  runner.py
backend/app/launcher/: __init__.py  bridge.py  main.py  network.py  server_process.py
backend/app/models/: __init__.py  attendance.py  courses.py  identity.py  locations.py  lottery.py  members.py  operations.py  organization.py  registrations.py
backend/app/modules/: __init__.py
backend/app/repositories/: __init__.py  attendance_repository.py  auth_repository.py  building_repository.py  course_repository.py  location_repository.py  (+8 more)
backend/tests/: __init__.py  conftest.py  schema_contract.py  test_bootstrap.py  test_composition.py  test_db_metadata.py  test_db_session.py  test_health.py  test_logging.py  test_migrations.py  test_runtime.py  test_settings.py  test_sqlite_schema_contract.py  update_sqlite_schema_contract.py
(+339 files in other folders)
