[project]
name = "baeum-maru-backend"
version = "0.1.0"
description = "Baeum Maru local operation server and desktop launcher"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.14.2",
    "pywebview>=6.2.1",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "tests"]
